--- a/paredeswinerywebsitetemplate/about.html
+++ b/paredeswinerywebsitetemplate/about.html
@@ -155,6 +155,31 @@
 						&copy; <a href="">Nguyen Trong Hieu 24314065</a> TIU 
 					</p>
 				</div>
+				<div id="footer">
+					<ul>
+						<li class="selected">
+							<a href="index.html">home</a>
+						</li>
+						<li>
+							<a href="wines.html">our products</a>
+						</li>
+						<li>
+							<a href="history.html">history</a>
+						</li>
+						<li>
+							<a href="about.html">about</a>
+						</li>
+						<li>
+							<a href="blog.html">blog</a>
+						</li>
+						<li>
+							<a href="contact.html">contact</a>
+						</li>
+					</ul>
+					<p>
+						&copy; <a href="about.html">Nguyen Trong Hieu 24314065</a> TIU 
+					</p>
+				</div>
 			</div>
 		</div>
 	</div>
